--- a/firebase.json
+++ b/firebase.json
@@ -12,8 +12,7 @@
         }
     ],
     "firestore": {
-        "rules": "firestore.rules",
-        "indexes": "firestore.indexes.json"
+        "rules": "firestore.rules"
     },
     "hosting": {
         "public": "web/out",
