--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
         "dayjs": "^1.11.9",
         "firebase": "^10.4.0",
         "framer-motion": "^10.12.18",
+        "lodash": "^4.17.21",
         "next": "^13.4.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
