--- a/web/package.json
+++ b/web/package.json
@@ -10,35 +10,37 @@
     },
     "dependencies": {
         "@emotion/react": "^11.11.1",
-        "@mantine/core": "^6.0.16",
-        "@mantine/dates": "^6.0.16",
-        "@mantine/form": "^6.0.16",
-        "@mantine/hooks": "^6.0.16",
-        "@mantine/modals": "^6.0.16",
-        "@mantine/notifications": "^6.0.16",
-        "@mantine/prism": "^6.0.16",
+        "@mantine/carousel": "^6.0.21",
+        "@mantine/core": "^6.0.21",
+        "@mantine/dates": "^6.0.21",
+        "@mantine/form": "^6.0.21",
+        "@mantine/hooks": "^6.0.21",
+        "@mantine/modals": "^6.0.21",
+        "@mantine/notifications": "^6.0.21",
+        "@mantine/prism": "^6.0.21",
         "classnames": "^2.3.2",
-        "dayjs": "^1.11.9",
-        "firebase": "^10.4.0",
-        "framer-motion": "^10.12.18",
+        "dayjs": "^1.11.10",
+        "embla-carousel-react": "8.0.0-rc14",
+        "firebase": "^10.5.0",
+        "framer-motion": "^10.16.4",
         "lodash": "^4.17.21",
-        "next": "^13.4.1",
+        "next": "^13.5.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-icons": "^4.10.1",
+        "react-icons": "^4.11.0",
         "react-query": "^3.39.3",
         "reactfire": "^4.2.3",
         "shared": "workspace:*",
-        "zustand": "^4.3.9"
+        "zustand": "^4.4.3"
     },
     "devDependencies": {
-        "@types/node": "^17.0.12",
-        "@types/react": "^18.0.22",
-        "@types/react-dom": "^18.0.7",
-        "@zachsents/next-firebase-rewrites": "*",
-        "autoprefixer": "^10.4.14",
+        "@types/node": "^17.0.45",
+        "@types/react": "^18.2.28",
+        "@types/react-dom": "^18.2.13",
+        "@zachsents/next-firebase-rewrites": "^1.1.1",
+        "autoprefixer": "^10.4.16",
         "eslint-config-custom": "workspace:*",
-        "postcss": "^8.4.25",
-        "tailwindcss": "^3.3.2"
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.3.3"
     }
 }
