--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,8 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "deploy": "next-firebase-rewrites build -f .. && firebase deploy --only hosting"
     },
     "dependencies": {
         "@emotion/react": "^11.11.1",
