--- a/web/package.json
+++ b/web/package.json
@@ -19,11 +19,14 @@
         "@mantine/modals": "^6.0.21",
         "@mantine/notifications": "^6.0.21",
         "@mantine/prism": "^6.0.21",
+        "@zachsents/fire-query": "^1.0.14",
         "classnames": "^2.3.2",
         "dayjs": "^1.11.10",
         "embla-carousel-react": "8.0.0-rc14",
         "firebase": "^10.5.0",
         "framer-motion": "^10.16.4",
+        "fuzzy": "^0.1.3",
+        "gray-matter": "^4.0.3",
         "lodash": "^4.17.21",
         "next": "^13.5.4",
         "react": "^18.2.0",
@@ -31,6 +34,8 @@
         "react-icons": "^4.11.0",
         "react-query": "^3.39.3",
         "reactfire": "^4.2.3",
+        "remark": "^15.0.1",
+        "remark-react": "^9.0.1",
         "shared": "workspace:*",
         "zustand": "^4.4.3"
     },
