--- a/functions/package.json
+++ b/functions/package.json
@@ -2,6 +2,7 @@
     "name": "functions",
     "description": "Cloud Functions for Firebase",
     "scripts": {
+        "build": "metadef build -o ./services/index.js -i \"\" -d ./services -s service.js -r",
         "dev": "firebase emulators:start --only functions",
         "shell": "firebase functions:shell",
         "start": "npm run shell",
@@ -13,6 +14,7 @@
     },
     "main": "index.js",
     "dependencies": {
+        "@zachsents/meta-definitions": "^1.1.1",
         "express": "^4.18.2",
         "firebase-admin": "^11.11.0",
         "firebase-functions": "^4.4.1",
