Added AuthService class and Airtable adapter

--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,8 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "deploy": "next-firebase-rewrites build -f .. && firebase deploy --only hosting"
+        "deploy": "next-firebase-rewrites build -f .. && firebase deploy --only hosting",
+        "bd": "pnpm run build && pnpm run deploy"
     },
     "dependencies": {
         "@emotion/react": "^11.11.1",
