--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@emotion/react": "^11.11.1",
+        "@feedback-fish/react": "^1.2.2",
         "@mantine/carousel": "^6.0.21",
         "@mantine/core": "^6.0.21",
         "@mantine/dates": "^6.0.21",
