--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,10 @@
         "@mantine/modals": "^6.0.21",
         "@mantine/notifications": "^6.0.21",
         "@mantine/prism": "^6.0.21",
+        "@mdx-js/loader": "^3.0.0",
+        "@mdx-js/react": "^3.0.0",
+        "@next/mdx": "^14.0.1",
+        "@types/mdx": "^2.0.10",
         "@zachsents/fire-query": "^1.1.4",
         "classnames": "^2.3.2",
         "dayjs": "^1.11.10",
@@ -31,11 +35,13 @@
         "gray-matter": "^4.0.3",
         "lodash": "^4.17.21",
         "next": "^13.5.4",
+        "next-mdx-remote": "^4.4.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.11.0",
         "react-query": "^3.39.3",
         "reactfire": "^4.2.3",
+        "rehype-slug": "^6.0.0",
         "remark": "^15.0.1",
         "remark-react": "^9.0.1",
         "shared": "workspace:*",
