--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "build": "next build && node ./generate-sitemap.js",
+        "build": "node ./generate-sitemap.js && next build",
         "start": "next start",
         "lint": "next lint",
         "deploy": "next-firebase-rewrites build -f .. && firebase deploy --only hosting",
